<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/accountIconImage"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/usericon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="22dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/pencilicon"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteY="233dp" />

    <TextView
        android:id="@+id/accountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:text="@string/accountName"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountIconImage"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:text="Name"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameInfo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="E-Mail"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="22dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/pencilicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteY="308dp" />

    <TextView
        android:id="@+id/accountEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:text="@string/accountEmail"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountEmail"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="Password"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/paymentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passInfo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="Payment"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountName"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="Username"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/passInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:text="@string/passInfo"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/cardInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:text="@string/cardInfo"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/usernameInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:text="@string/usernameInfo"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"

        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="Account Settings"
        android:textColor="@color/colorAccent"
        android:textSize="25dp"

        android:visibility="visible" />

    <ImageButton
        android:id="@+id/accountButton"
        android:layout_width="63dp"
        android:layout_height="54dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:tint="@color/colorAccent"
        app:srcCompat="@drawable/usericon" />



    <ImageButton
        android:id="@+id/pencilButton2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@+id/cardInfo"
        android:layout_marginLeft="-70dp"
        android:layout_marginTop="-25dp"
        android:layout_toRightOf="@id/cardInfo"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/pencilicon" />

    <ImageButton
        android:id="@+id/pencilButton3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@+id/passInfo"
        android:layout_marginLeft="-70dp"
        android:layout_marginTop="-25dp"
        android:layout_toRightOf="@id/passInfo"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/pencilicon" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cardInfo"
        android:text="Log Out" />


</RelativeLayout>